Add GenericEntityController that accepts search criteria.